<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <import type="org.linphone.core.TransportType"/>
        <variable
            name="viewModel"
            type="org.linphone.activities.assistant.viewmodels.GenericLoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/top_bar_fragment"
            android:name="org.linphone.activities.assistant.fragments.TopBarFragment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_activity_top_bar_size"
            android:layout_alignParentTop="true"
            tools:layout="@layout/assistant_top_bar_fragment" />

        <androidx.core.widget.NestedScrollView
            android:layout_below="@id/top_bar_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/standard_text_font"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/assistant_generic_account"
                    android:paddingTop="10dp"
                    android:textAllCaps="true" />

                <TextView
                    style="@style/standard_small_text_font"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="top"
                    android:paddingTop="15dp"
                    android:text="@string/assistant_login_desc" />

                <!--EDITTEXT INSERTAR CARNET-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        app:endIconMode="custom"
                        app:endIconDrawable="@drawable/icon_carnet"
                        app:helperText="@string/assistant_mandatory_user"
                        app:helperTextTextColor="@color/red_color"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingRight="10dp"
                        android:hint="@string/login_search_carnet">

                        <com.google.android.material.textfield.TextInputEditText
                            android:text="@={viewModel.areInputsEnabled}"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:inputType="text|textNoSuggestions"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnMostrar"
                        style="@style/button_font"
                        android:drawableLeft="@drawable/search"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/button_color_session"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/search_button"
                        android:textColor="@color/white_color"
                        app:cornerRadius="50dp" />

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:endIconMode="custom"
                    app:endIconDrawable="@drawable/icon_users"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/assistant_display_name_optional">

                    <com.google.android.material.textfield.TextInputEditText
                        android:text="@={viewModel.displayName}"
                        android:imeOptions="actionDone"
                        android:singleLine="true"
                        android:focusable="false"
                        android:enabled="false"
                        android:inputType="textPersonName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:endIconMode="custom"
                    app:endIconDrawable="@drawable/icon_job"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ssistant_job_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:text="@={viewModel.roleDescriptionDisplay}"
                        android:imeOptions="actionDone"
                        android:singleLine="true"
                        android:focusable="false"
                        android:enabled="false"
                        android:inputType="textPersonName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:endIconMode="custom"
                    app:endIconDrawable="@drawable/icon_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username">

                    <com.google.android.material.textfield.TextInputEditText

                        android:text="@={viewModel.username}"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:inputType="text|textNoSuggestions"
                        android:focusable="false"
                        android:enabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>


                <!--Spinner
                    android:id="@+id/my_spinner2"
                    android:layout_width="300dp"
                    android:layout_height="55dp"
                    android:background="@drawable/custom_spinner_background"
                    android:padding="8dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    /-->

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    android:enabled="@{viewModel.loginEnabled, default=false}"
                    android:text="@string/assistant_login"
                    android:backgroundTint="@color/button_color_session"
                    android:textColor="@color/white_color"
                    style="@style/button_font"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cornerRadius="50dp"
                    app:icon="@drawable/icon_entrar"
                    app:iconGravity="textEnd"
                    app:iconPadding="10dp"
                    app:iconSize="40dp"/>


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <include
            layout="@layout/wait_layout"
            app:visibility="@{viewModel.waitForServerAnswer}"/>

    </RelativeLayout>

</layout>

