<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>
        <variable
            name="privacyPolicyClickListener"
            type="android.view.View.OnClickListener"/>
        <variable
            name="licenseClickListener"
            type="android.view.View.OnClickListener"/>
        <variable
            name="weblateClickListener"
            type="android.view.View.OnClickListener"/>
        <variable
            name="viewModel"
            type="org.linphone.activities.main.about.AboutViewModel" />
        />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor">

        <LinearLayout
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_activity_top_bar_size"
            android:background="?attr/lightToolbarBackgroundColor"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:contentDescription="@string/content_description_go_back"
                android:padding="15dp"
                android:background="?attr/button_background_drawable"
                android:src="@drawable/back" />

            <TextView
                style="@style/accent_colored_title_font"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center"
                android:singleLine="true"
                android:ellipsize="end"
                android:padding="15dp"
                android:text="@string/about"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:visibility="invisible" />

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_below="@id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:background="@color/transparent_color"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <ImageView
                        android:layout_width="140dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:padding="10dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@null"
                        android:src="@drawable/logo_syscall_inicio" />

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:padding="10dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@null"
                        android:src="@drawable/logo_syscall2" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:background="@color/transparent_color"
                    android:padding="10dp">


                    <TextView
                        style="@style/about_version_font"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingTop="20dp"
                        android:text="@{String.format(@string/about_version,viewModel.appVersion )}"
                        android:textColorLink="@color/black_color"
                        android:textIsSelectable="true" />

                    <TextView
                        android:textColor="?attr/accentColor"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:autoLink="web"
                        android:gravity="center"
                        android:paddingTop="20dp"
                        android:text="@string/about_link"
                        android:textColorLink="@color/primary_dark_color" />

                    <TextView
                        android:onClick="@{privacyPolicyClickListener}"
                        style="@style/about_license_font"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:autoLink="web"
                        android:paddingTop="10dp"
                        android:gravity="center"
                        android:text="@string/about_privacy_policy"
                        android:textColorLink="@color/black_color" />

                    <TextView
                        android:onClick="@{licenseClickListener}"
                        style="@style/about_license_font"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/about_text" />


                    <TextView
                        android:onClick="@{weblateClickListener}"
                        android:textColor="@color/primary_dark_color"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingTop="10dp"
                        android:paddingBottom="20dp"
                        android:text="@string/about_weblate_translation" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?attr/dividerColor" />

                </LinearLayout>


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</layout>